test/expected/explain_attda2i.out
typedef int A[2]; explain _Atomic A x
         ^
10: error: array can not be _Atomic
